fixed form group labels shifting when errors are present

--- a/src/components/form/fields/MaskedTextField/MaskedTextField.module.scss
+++ b/src/components/form/fields/MaskedTextField/MaskedTextField.module.scss
@@ -44,3 +44,6 @@ input:disabled {
   display: block;
 }
 
+:global(.usa-form-group.usa-form-group--error) {
+  margin-top: 1.6rem;
+}
